--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -4,8 +4,6 @@
         <strong class="text-dark-text3 dark:text-light-text3 font-normal font-yekan">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
-        
-        <!-- <strong class="font-normal font-vazir text-xs {{(currencyItem?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{ currencyItem?.lastPriceInfo?.dp}}%</strong> -->
         <strong class="font-normal font-vazir text-xs {{(showCurrencyId === 0 && currencyItem?.rialChangeState === 'low') || (showCurrencyId === 1 && currencyItem?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(showCurrencyId === 0 && currencyItem?.rialChangeState === 'low') || (showCurrencyId === 1 && currencyItem?.dollarChangeState === 'low') ? '-' : '+'}}{{showCurrencyId === 0 ? currencyItem?.rialChanges : currencyItem?.dollarChanges}}%</strong>
     </div>
     <div class="flex flex-col items-end justify-center w-[25%] relative">
@@ -14,12 +12,13 @@
         <strong *ngIf="currencyItem?.groupName === 'World_Market'" class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">{{ currencyItem?.lastPriceInfo?.p }}</strong>
         <div class="flex justify-center items-start gap-2 relative ">
             
-            <div *ngIf="currencyItem?.poundAsk" class="flex justify-center items-start relative">   
-                <div class="z-[3] absolute flex flex-col bottom-[-0.8rem] h-12 justify-center items-end w-34 speech-bubble">
-                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text ">قیمت اصلی: {{currencyItem?.lastPriceInfo?.p}} یورو</p>
-                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text ">نرخ تبدیل: {{currencyItem?.poundAsk}}</p>
+            <div *ngIf="currencyItem?.poundAsk" class="group flex justify-center items-start relative"> 
+                  <!--    -->
+                <div class="z-[3] group-hover:flex hidden bg-light-border dark:bg-dark-border absolute flex-col bottom-[-0.8rem] h-12 justify-center items-end w-38 speech-bubble">
+                    <span class="text-xs font-vazir rtl text-dark-text dark:text-light-text">قیمت اصلی: {{currencyItem?.lastPriceInfo?.p}} یورو</span>
+                    <span class="text-xs font-vazir rtl text-dark-text dark:text-light-text">نرخ تبدیل: {{currencyItem?.poundAsk}}</span>
                 </div>
-                <i class="hover:cursor-pointer bi bi-info-circle-fill text-2xs md:text-sm text-dark-text2 dark:text-light-text2 relative"></i>
+                <i class="hover:cursor-pointer peer z-[3] bi bi-info-circle-fill text-2xs md:text-sm text-dark-text2 dark:text-light-text2 relative"></i>
             </div>
             <strong class="{{currencyItem?.groupName !== 'World_Market' ? 'opacity-100' : 'opacity-0'}} text-dark-text2 dark:text-light-text2 font-normal font-yekan text-2xs md:text-sm">{{showCurrencyId === 0 ? 'تومان' : 'دلار'}}</strong>
         </div>
@@ -27,8 +26,8 @@
     <div class="flex justify-end items-start gap-1.5 flex-1">
         <div class="flex pl-0.5 overflow-hidden text-ellipsis">
             <div class="flex flex-col items-end justify-start">
-                <p class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light w-full text-end font-byekan-plus text-2xs sm:text-xs md:text-base leading-6">{{currencyItem?.title}}</p>
-                <p class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs sm:text-sm {{currencyItem?.filterName === 'سکه در بورس' ? 'font-byekanp' : 'font-byekan-plus'}}">{{currencyItem?.shortedName}}</p>
+                <span class="text-dark-text2 dark:text-light-text2 order-2 sm:order-1 sm:text-dark sm:dark:text-light w-full text-end font-byekan-plus text-2xs sm:text-xs md:text-base leading-6">{{currencyItem?.title}}</span>
+                <span class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs sm:text-sm {{currencyItem?.filterName === 'سکه در بورس' ? 'font-byekanp' : 'font-byekan-plus'}}">{{currencyItem?.shortedName}}</span>
             </div>
         </div>
         <div class="mr-5 flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
