CSS Styles Removed

--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -1,4 +1,4 @@
-<article class="min-h-[4.853rem] padding-inline-4 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border md:hover:bg-light-hover md:hover:dark:bg-dark-hover hover:cursor-pointer">
+<article class="min-h-[4.853rem] px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border md:hover:bg-light-hover md:hover:dark:bg-dark-hover hover:cursor-pointer">
     <div class="justify-start items-center gap-1.5 w-[20%] hidden md:flex">
         <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal"></i>
         <strong class="text-dark-text3 dark:text-light-text3 font-normal font-yekan">اطلاعات بیشتر</strong>
@@ -29,7 +29,7 @@
                 <span class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs sm:text-sm {{currencyItem?.filterName === 'سکه در بورس' ? 'font-byekanp' : 'font-byekan-plus'}}">{{currencyItem?.shortedName}}</span>
             </div>
         </div>
-        <div class="mr-5 flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
+        <div class="flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
             <img class="md:w-8 md:h-8 w-6 h-6 object-cover rounded-full mr-2 mt-1" src="{{currencyItem?.img}}" alt="">
         
             <div class="flex">
