--- a/src/app/empty-item/empty-item.component.html
+++ b/src/app/empty-item/empty-item.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-[4.853rem] animate-pulse padding-inline-4 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
+<div class="min-h-[4.853rem] animate-pulse px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
     <div class="justify-start items-center gap-1.5 w-[20%] hidden md:flex">
         <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal opacity-0"></i>
         <strong class="text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse font-normal font-yekan">اطلاعات بیشتر</strong>
