--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,15 @@
-<!-- <main >
-    <div class="margin-inline-7">
-        @for (item of reqestClass?.allItemsList; track item.id) {
-            <currency-item [currencyItem]="item"/>
-        }
-    </div> -->
-    <!-- *ngFor="let item of reqestClass?.allItemsList"
-    <div class="h-[5rem] w-[20%]">
-
-     </div>
-</main> -->
-
-<main class="w-full bg-light dark:bg-dark flex flex-col flex-1 padding-top-16">
-    <div class="order-2 relative sm:order-1 mx-0 margin-inline-7 padding-inline-4 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
+<main class="w-full bg-light dark:bg-dark flex flex-col flex-1 pt-16">
+    <div class="order-2 relative sm:order-1 mx-0 sm:mx-[12.5%] px-4 sm:px-0 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
         
         
         <div #scrollViewCategory (scroll)="onScrollCategoryEventHandler()" class="inline-block text-center whitespace-nowrap overflow-hidden rtl scroll-hide w-full overflow-x-scroll scroll-smooth scroll-snap-x">
             <div class="inline-block scroll-hide w-full text-right">
                 @for (item of categories; track item.title) {
-                    <div class="inline-block text-center align-middle margin-left-1">
+                    <div class="inline-block text-center align-middle ml-[0.7rem] sm:ml-4">
                         <div class="flex flex-col justify-center items-center relative">
                             <span
                                 (click)="setCurrentCategory(item.title)"
-                                class="padding-block-1 {{ item.title === currentCategory() ? 'text-dark dark:text-light' : 'text-dark-text2 dark:text-light-text2'}} hover:cursor-pointer flex items-center justify-center gap-2.5 font-yekan text-base sm:text-lg">
+                                class="py-4 {{ item.title === currentCategory() ? 'text-dark dark:text-light' : 'text-dark-text2 dark:text-light-text2'}} hover:cursor-pointer flex items-center justify-center gap-2.5 font-yekan text-base sm:text-lg">
                                 <star-icon [selected]="item.title === currentCategory()" *ngIf="item.title == 'دیده بان'" />
                                 {{item.title}}
                             </span>
@@ -33,25 +21,25 @@
             </div>
         </div>
         
-        <div #rightCategoryArrow [class.hidden]="!showRightCategoryArrow()" id="rightCategoryArrow" class="absolute h-full text-start align-middle right-0 top-1/2 -translate-y-1/2 padding-block-1-arrow padding-inline-1-arrow bg-light dark:bg-dark w-10 border-b border-b-light dark:border-b-dark">
+        <div #rightCategoryArrow [class.hidden]="!showRightCategoryArrow()" id="rightCategoryArrow" class="absolute h-full text-start align-middle right-0 top-1/2 -translate-y-1/2 pt-[0.2rem] pb-[0.4rem] px-[0.4rem] bg-light dark:bg-dark w-10 border-b border-b-light dark:border-b-dark">
             <div (click)="categoryRight()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-right-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
         </div>
 
-        <div #leftCategoryArrow [class.hidden]="!showLeftCategoryArrow()" id="leftCategoryArrow" class="absolute h-full text-end align-middle left-0 top-1/2 -translate-y-1/2 padding-block-1-arrow padding-inline-1-arrow bg-light dark:bg-dark w-10 border-b border-b-light dark:border-b-dark">
+        <div #leftCategoryArrow [class.hidden]="!showLeftCategoryArrow()" id="leftCategoryArrow" class="absolute h-full text-end align-middle left-0 top-1/2 -translate-y-1/2 pt-[0.2rem] pb-[0.4rem] px-[0.4rem] bg-light dark:bg-dark w-10 border-b border-b-light dark:border-b-dark">
             <div (click)="categoryLeft()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-left-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
         </div>
     </div>
 
-    <div class="order-1 sm:order-2 flex margin-inline-7 padding-inline-4 gap-4 {{ canShowSupportedCurrencyToggle() ? 'justify-between' : 'justify-end' }} padding-vertical-2 items-start bg-light dark:bg-dark border-b border-b-light-text3 dark:border-b-dark-text3">
+    <div class="order-1 sm:order-2 flex mx-0 sm:mx-[12.5%] px-4 sm:px-0 gap-4 {{ canShowSupportedCurrencyToggle() ? 'justify-between' : 'justify-end' }} py-2 sm:py-4 items-start bg-light dark:bg-dark border-b border-b-light-text3 dark:border-b-dark-text3">
         <div *ngIf="canShowSupportedCurrencyToggle()" class="overflow-hidden flex flex-row-reverse">
             @for (currency of supportedCurrencies; track currency.id) {
                 <div
                     (click)="currentSupportCurrencyId = currency.id"
-                    class="border {{ currency.id === 0 ? (currency.id === currentSupportCurrencyId ? 'border-green-btn rounded-r-semi' : 'border-l-0 rounded-r-semi border-dark-text2 dark:border-light-text2') : (currency.id === currentSupportCurrencyId ? 'border-green-btn rounded-l-semi' : 'border-r-0 rounded-l-semi border-dark-text2 dark:border-light-text2') }} sm:w-18 w-25 h-12 flex justify-center padding-inline-0.25 items-center cursor-pointer">
+                    class="border {{ currency.id === 0 ? (currency.id === currentSupportCurrencyId ? 'border-green-btn rounded-r-semi' : 'border-l-0 rounded-r-semi border-dark-text2 dark:border-light-text2') : (currency.id === currentSupportCurrencyId ? 'border-green-btn rounded-l-semi' : 'border-r-0 rounded-l-semi border-dark-text2 dark:border-light-text2') }} sm:w-18 w-25 h-12 flex justify-center px-[0.25rem] items-center cursor-pointer">
                     <p class="rtl {{ currency.id === currentSupportCurrencyId ? 'text-dark dark:text-light' : 'text-dark-text2 dark:text-light-text2' }} font-vazir text-2xs sm:text-xs">{{currency.title}}</p>
                 </div>
             }
@@ -62,18 +50,18 @@
                 <path id="Path_215" data-name="Path 215" d="M14.953,2.547A12.643,12.643,0,1,0,27.6,15.19,12.649,12.649,0,0,0,14.953,2.547Zm0,2A10.643,10.643,0,1,1,4.31,15.19,10.648,10.648,0,0,1,14.953,4.547Z" transform="translate(-2.31 -2.547)" fill-rule="evenodd"/>
                 <path id="Path_216" data-name="Path 216" d="M30.441,28.789l-6.276-6.276a1,1,0,1,0-1.414,1.414L29.027,30.2a1,1,0,1,0,1.414-1.414Z" transform="translate(-2.31 -2.547)" fill-rule="evenodd"/>
             </svg>
-            <input #searchInput type="text" id="searchInput" name="searchInput" (input)="filterList($event)" (focusout)="inputMouseEnter($event)" (mouseenter)="inputMouseEnter($event)" (mouseleave)="inputMouseLeave($event)" class="rtl transition duration-300 ease-out input-paddings rounded-semi font-byekan-plus font-thin outline-none bg-transparent border border-light-text2 h-full dark:border-dark-text2 text-light-text2 dark:text-dark-text2 text-sm w-full text-right select-none" placeholder="عنوان را در {{currentCategory()}} جستجو کنید">
+            <input #searchInput type="text" id="searchInput" name="searchInput" (input)="filterList($event)" (focusout)="inputMouseEnter($event)" (mouseenter)="inputMouseEnter($event)" (mouseleave)="inputMouseLeave($event)" class="rtl transition duration-300 ease-out pl-[0.8rem] pr-[2.7rem] rounded-semi font-byekan-plus font-thin outline-none bg-transparent border border-light-text2 h-full dark:border-dark-text2 text-light-text2 dark:text-dark-text2 text-sm w-full text-right select-none" placeholder="عنوان را در {{currentCategory()}} جستجو کنید">
         </div>
     </div>
 
-    <div  class="order-3 rtl margin-inline-7 relative text-right padding-inline-4 justify-start padding-vertical-3 bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
-        <div #rightSubCategoryArrow [class.hidden]="!showRightSubCategoryArrow()" id="rightSubCategoryArrow" class="absolute h-[99.9%] text-start align-middle right-0 top-1/2 -translate-y-1/2 padding-block-1-arrow padding-inline-1-arrow bg-light dark:bg-dark w-10">
+    <div  class="order-3 rtl mx-0 sm:mx-[12.5%] relative text-right px-4 sm:px-0 justify-start py-[0.7rem] sm:py-[1.2rem] bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
+        <div #rightSubCategoryArrow [class.hidden]="!showRightSubCategoryArrow()" id="rightSubCategoryArrow" class="absolute h-[99.9%] text-start align-middle right-0 top-1/2 -translate-y-1/2 pt-[0.2rem] pb-[0.4rem] px-[0.4rem] bg-light dark:bg-dark w-10">
             <div (click)="subCategoryRight()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-right-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
         </div>
 
-        <div #leftSubCategoryArrow [class.hidden]="!showLeftSubCategoryArrow()" id="leftSubCategoryArrow" class="absolute h-[99.9%] text-end align-middle left-0 top-1/2 -translate-y-1/2 padding-block-1-arrow padding-inline-1-arrow bg-light dark:bg-dark w-10">
+        <div #leftSubCategoryArrow [class.hidden]="!showLeftSubCategoryArrow()" id="leftSubCategoryArrow" class="absolute h-[99.9%] text-end align-middle left-0 top-1/2 -translate-y-1/2 pt-[0.2rem] pb-[0.4rem] px-[0.4rem] bg-light dark:bg-dark w-10">
             <div (click)="subCategoryLeft()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-left-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
@@ -82,7 +70,7 @@
         <div #scrollViewSubCategory (scroll)="onScrollEventHandler()" class="scroll-hide w-full overflow-x-scroll scroll-smooth scroll-snap-x text-right whitespace-nowrap">
             <div class="inline-block scroll-hide w-full">
                 @for (item of currentSubCategoryList; track item) {
-                    <p (click)="filterByCategory(item)" class="{{item === currentSubCategory() ? 'bg-light-highlight dark:bg-dark-highlight rounded-md text-dark-text3 dark:text-light-text3' : 'text-dark-text2 dark:text-light-text2' }} h-8 text-center align-middle inline-block padding-constant-1 hover:cursor-pointer font-byekan-plus text-sm sm:text-base">{{item}}</p>
+                    <p (click)="filterByCategory(item)" class="{{item === currentSubCategory() ? 'bg-light-highlight dark:bg-dark-highlight rounded-md text-dark-text3 dark:text-light-text3' : 'text-dark-text2 dark:text-light-text2' }} h-8 text-center align-middle inline-block pt-[0.2rem] pb-[0.4rem] px-[0.3rem] ml-[0.6rem] mb-[0.3rem] hover:cursor-pointer font-byekan-plus text-sm sm:text-base">{{item}}</p>
                 }
             </div>
         </div>
@@ -91,7 +79,7 @@
     </div>
     
 
-    <div class="order-4 margin-inline-7 padding-inline-4 flex justify-between padding-vertical-2 items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
+    <div class="order-4 mx-0 sm:mx-[12.5%] px-4 sm:px-0 flex justify-between padding-vertical-2 items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
         <div class="w-[25%] md:w-[35%] flex justify-start md:justify-end">
             <div (click)="changeChange24hSortingType()" class="hover:cursor-pointer flex gap-3 flex-row items-center w-fit">
                 <div class="flex flex-col">
@@ -120,7 +108,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="currenTemptList?.length !== 0" class="order-4 mx-0 margin-inline-7">
+    <div *ngIf="currenTemptList?.length !== 0" class="order-4 mx-0 sm:mx-[12.5%]">
         @for (item of currenTemptList2; track item.id) {
             <currency-item
                 [showCurrencyId]="currentSupportCurrencyId"
@@ -133,7 +121,7 @@
     </div>
     <div
         *ngIf="currentCategory() !== 'دیده بان' && currenTemptList?.length === 0"
-        class="order-5 mx-0 margin-inline-7"
+        class="order-5 mx-0 sm:mx-[12.5%]"
         >
         <empty-item />
         <empty-item />
@@ -142,7 +130,7 @@
     </div>
 </main>
 
-<div animate.enter="enter-animation" animate.leave="leave-animation" #successMsg class="transform translate-y-[-15rem] translate-x-0 fixed w-[75%] sm:w-auto padding-inline-8 top-5 right-5 h-12 flex justify-between gap-0 sm:gap-20 items-center z-20 border rounded-semi border-popup-border-green-light dark:border-popup-border-green-dark bg-popup-green-light font-vazir dark:bg-popup-green-dark text-sm text-dark-text dark:text-light-text">
+<div animate.enter="enter-animation" animate.leave="leave-animation" #successMsg class="transform translate-y-[-15rem] translate-x-0 fixed w-[75%] sm:w-auto px-[1.3rem] top-5 right-5 h-12 flex justify-between gap-0 sm:gap-20 items-center z-20 border rounded-semi border-popup-border-green-light dark:border-popup-border-green-dark bg-popup-green-light font-vazir dark:bg-popup-green-dark text-sm text-dark-text dark:text-light-text">
     <i (click)="removeNotification()" class="bi bi-x-lg hover:cursor-pointer"></i>
     {{ currentNotification }}
 </div>
