--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,13 +22,13 @@
         </div>
         
         <div #rightCategoryArrow [class.hidden]="!showRightCategoryArrow()" id="rightCategoryArrow" class="absolute h-full text-start align-middle right-0 top-1/2 -translate-y-1/2 pt-[0.2rem] pb-[0.4rem] px-[0.4rem] bg-light dark:bg-dark w-10 border-b border-b-light dark:border-b-dark">
-            <div (click)="categoryRight()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
+            <div (click)="categoryRight()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 sm:translate-y-3 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-right-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
         </div>
 
         <div #leftCategoryArrow [class.hidden]="!showLeftCategoryArrow()" id="leftCategoryArrow" class="absolute h-full text-end align-middle left-0 top-1/2 -translate-y-1/2 pt-[0.2rem] pb-[0.4rem] px-[0.4rem] bg-light dark:bg-dark w-10 border-b border-b-light dark:border-b-dark">
-            <div (click)="categoryLeft()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
+            <div (click)="categoryLeft()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 sm:translate-y-3 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-left-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
         </div>
