Charts library added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -116,6 +116,7 @@
                 [currencyItem]="item"
                 (favRemoved)="onFavRemoveItem($event)"
                 (favAdded)="onFavAddItem($event)"
+                (itemSelected)="onItemSelect($event)"
             />
         }
         
