Height of main screen solved

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<main class="w-full bg-light dark:bg-dark flex flex-col flex-1 pt-16">
+<main class="w-full min-h-screen bg-light dark:bg-dark flex flex-col flex-1 pt-16 ">
     <div class="order-2 relative sm:order-1 mx-0 sm:mx-[12.5%] px-4 sm:px-0 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
         
         
