--- a/src/app/currency-item-details/currency-item-details.component.html
+++ b/src/app/currency-item-details/currency-item-details.component.html
@@ -1,3 +1,3 @@
-<main class="w-full bg-light dark:bg-dark flex flex-col flex-1 pt-16">
+<main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex flex-col flex-1 pt-16">
 
 </main>
