--- a/src/app/empty-item/empty-item.component.html
+++ b/src/app/empty-item/empty-item.component.html
@@ -21,11 +21,11 @@
                 <p class="order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 text-transparent bg-light-border dark:bg-dark-border opacity-100 sm:opacity-0 rounded-sm sm:bg-transparent sm:rounded-none font-normal text-xs sm:text-sm">usd dollar</p>
             </div>
         </div>
-        <div class="mr-5 flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
+        <div class="flex gap-0 md:gap-1.5 flex-row sm:flex-col md:flex-row">
             <div class="md:w-8 md:h-8 w-6 h-6 object-cover rounded-full mr-2 mt-1 bg-light-border dark:bg-dark-border animate-pulse" ></div>
         
             <div class="flex">
-                <span class="w-6 h-7 flex justify-end items-center sm:items-end opacity-0" >
+                <span class="w-6 h-7 opacity-0 flex justify-end items-center sm:items-end">
                     <star-icon />
                 </span>
             </div>
