--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -1,9 +1,9 @@
 <main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex pt-29 px-41 pb-16 flex-row-reverse flex-nowrap justify-between items-start">
-    <div class="w-[69%]">
+    <div class="w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
         
     </div>
 
-    <div class="w-[27%]">
+    <div class="w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
 
     </div>
 </main>
