--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -1,4 +1,4 @@
-<main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex pt-29 px-41 pb-16 flex-row-reverse flex-nowrap justify-between items-start">
+<main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 md:px-18 md:pb-8 md:pt-24 lg:pt-29 lg:px-41 lg:pb-16 flex-row-reverse flex-nowrap justify-between items-start">
     <div class="w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
         <app-breadcrumb [items]="breadCrumbItems" />
     </div>
