Main font added

--- a/src/app/components/not-shared/home/empty-item/empty-item.component.html
+++ b/src/app/components/not-shared/home/empty-item/empty-item.component.html
@@ -1,23 +1,23 @@
 <div class="min-h-[4.853rem] animate-pulse px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
     <div class="justify-start items-center gap-1.5 w-[20%] hidden md:flex">
         <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal opacity-0"></i>
-        <strong class="text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse font-normal font-yekan">اطلاعات بیشتر</strong>
+        <strong class="text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse font-normal">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
         
-        <strong class="font-normal font-vazir text-xs text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse">+1.2%</strong>
+        <strong class="font-normal text-xs text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse">+1.2%</strong>
     </div>
     <div class="flex flex-col items-end justify-center w-[25%] relative">
 
-        <strong class="font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5 text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse">us dollar</strong>
+        <strong class="font-normal text-xs md:text-sm leading-4.5 md:leading-5 text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse">us dollar</strong>
         <div class="flex justify-center items-start gap-2 relative ">
-            <strong class="font-normal font-yekan text-2xs md:text-sm opacity-0">usd</strong>
+            <strong class="font-normal text-2xs md:text-sm opacity-0">usd</strong>
         </div>
     </div>
     <div class="flex justify-end items-start gap-1.5 flex-1">
         <div class="flex pl-0.5 overflow-hidden text-ellipsis">
             <div class="flex flex-col items-end justify-start">
-                <p class="text-transparent bg-transparent rounded-none opacity-0 sm:opacity-100 sm:rounded-sm sm:bg-light-border sm:dark:bg-dark-border order-2 sm:order-1 w-full text-end font-byekan-plus text-2xs sm:text-xs md:text-base leading-6">usd dollar</p>
+                <p class="text-transparent bg-transparent rounded-none opacity-0 sm:opacity-100 sm:rounded-sm sm:bg-light-border sm:dark:bg-dark-border order-2 sm:order-1 w-full text-end text-2xs sm:text-xs md:text-base leading-6">usd dollar</p>
                 <p class="order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 text-transparent bg-light-border dark:bg-dark-border opacity-100 sm:opacity-0 rounded-sm sm:bg-transparent sm:rounded-none font-normal text-xs sm:text-sm">usd dollar</p>
             </div>
         </div>
