--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -4,6 +4,8 @@
     </div>
 
     <div class="w-full md:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
-
+        <div>
+            
+        </div>
     </div>
 </main>
